-------------------------------------
	4.2-7
-------------------------------------
Upgraded jQuery from 1.8.2 to 1.10.2. Updated code to reflect
library changes.

Upgraded jQuery-UI from 1.8.23 to 1.10.3. Updated code to reflect
library changes.

Consolidated some JavaScript, and CSS files where possible.

Changed all instances of 'hover' CSS class to vboxHover.

Minor translation fixes.

-------------------------------------
	4.2-6	2013-07-22
-------------------------------------
Fixed bug where deleting or renaming a VM snapshot may not cause
the chooser to refresh VM data.

Minor translation bug fixes.

Fixed "Restore Defaults" button in Appliance Export Wizard.

VM settings dialog now prompts for reload if settings change while
the dialog is open.

VM settings dialog is now aware of VM state changes while the
dialog is open and updates VM editability accordingly.

Fixed XSS vulnerability.

Fixed bug that would not subscribe to events of machines that were
powered on while phpVirtualBox is open.

Added icons from VirtualBox source for Windows 8.1 and 2012.

Updated language files from latest VirtualBox release (4.2.16).

Added running VM count to VM Group tool tips.

Removing a copy of a VM in the chooser now removes it from the
interface rather than unregistering it.

Improved VM Group saving logic. Some items are no longer editable
or draggable while VM group definitions are being saved to
VirtualBox.

Minor UI changes.

Fixed bug that would not allow VMs to be dropped / copied into the
root VM group.

-------------------------------------
	4.2-5	2013-07-11
-------------------------------------
More details pane redraw fixes when VM selection list changes
while VM data is still loading

Fixed multiple IE8 bugs that affected selecting and removing VMs

Fixed bug that would incorrectly set the VRDE host to null if no
consoleHost was configured in config.php
http://code.google.com/p/phpvirtualbox/issues/detail?id=620
