@@ -13,6 +13,8 @@ Changed all instances of 'hover' CSS class to vboxHover.
 
 Minor translation fixes.
 
+Some VM properties are now editable when a VM is in a Saved state.
+
 -------------------------------------
 	4.2-6	2013-07-22
 -------------------------------------
